# jira-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml  install.ps1  install.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
bench/: README.md  run-api-bench.sh
bench/results/: .gitkeep  BENCHMARK_API.md  api_summary.json
docs/: DEPLOYMENT.md  RELEASING.md
docs/superpowers/plans/: 2026-04-17-jira-cli.md  2026-04-18-jira-cli-skill-plugin.md
docs/superpowers/specs/: 2026-04-17-jira-cli-design.md  2026-04-18-jira-cli-skill-plugin-design.md  2026-04-20-aua-jira-gitlab-cli-design.md
scripts/: update-homebrew-formula.sh
src/: config.rs  error.rs  field_resolver.rs  lib.rs  main.rs  output.rs  schema.rs
src/api/: agile.rs  attachment.rs  comment.rs  field.rs  issue.rs  link.rs  meta.rs  mod.rs  paging.rs  project.rs  search.rs  session.rs  transitions.rs  user.rs  watchers.rs  worklog.rs
src/cli/: args.rs  dispatch.rs  mod.rs
src/cli/commands/: attachment.rs  (+18 more)
src/http/: auth.rs  mod.rs  retry.rs
tests/: agile.rs  attachment.rs  auth_basic.rs  auth_cookie.rs  bulk.rs  cli_bulk_e2e.rs  cli_config_init_e2e.rs  cli_defaults_e2e.rs  cli_exit_codes.rs  cli_fields_e2e.rs  cli_issue_e2e.rs  cli_meta_e2e.rs  cli_raw_e2e.rs  cli_schema_e2e.rs  comment.rs  field.rs  field_resolver.rs  issue_bulk_create.rs  issue_crud.rs  issue_get.rs  link.rs  meta.rs  project.rs  retry.rs  search.rs  session.rs  transitions.rs  user.rs  watchers.rs  worklog.rs
tests/cli/: mod.rs
tests/common/: mod.rs
