# MSRV pinned to 1.88 due to transitive dep on cookie_store 0.22 / time-core 0.1.8.
# The plan doc still reads 1.75; treat this file as authoritative.
[package]
name = "jira-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Agent-first CLI for legacy Jira Server 8.13.5"
repository = "https://github.com/zhiyue/jira-cli"

[[bin]]
name = "jira-cli"
path = "src/main.rs"

[lib]
name = "jira_cli"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "cookies", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
